# flask-app

./: Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yaml  requirements.txt  setup.cfg
src/flask_app/: app.py  wsgi.py
