[metadata]
name = flask_app
version = 1.0.0
description = Flask App

[options]
packages = find:
package_dir =
    = src
install_requires =
    flask==2.0.2
    gunicorn==20.1.0
    celery-worker @ git+https://github.com/shiragcv/celery-worker.git#egg=celery_worker

[options.packages.find]
where = src
